--- a/charts/stable/scalar-ledger/values.yaml
+++ b/charts/stable/scalar-ledger/values.yaml
@@ -2,36 +2,55 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+# replicaCount -- number of replicas to deploy
 replicaCount: 1
 
 image:
+  # image.repository -- Docker image
   repository: scalarlabs/scalar-ledger
+  # image.tag -- Docker image tag, e.g: latest or specific version
   tag: 2.0.5
+  # image.pullPolicy -- Specify a imagePullPolicy
   pullPolicy: IfNotPresent
 
+# nameOverride -- String to partially override scalar-envoy.fullname template (will maintain the release name)
+nameOverride: ""
+
+# fullnameOverride -- String to fully override scalar-envoy.fullname template
+fullnameOverride: ""
+
 cassandra:
+  # cassandra.user -- user to use for connection
   user: cassandra
+  # cassandra.password -- password to use for connection
   password: cassandra
+  # cassandra.host -- host to use for connection
   host: cassandra
+  # cassandra.port -- port to use for connection
   port: 9042
 
+# podDisruptionBudget -- podDisruptionBudget Settings
 podDisruptionBudget: |
   maxUnavailable: 1
 
 strategy:
   rollingUpdate:
+    # strategy.rollingUpdate -- The number of pods that can be created above the desired amount of pods during an update
     maxSurge: 0
+    # strategy.rollingUpdate -- The number of pods that can be unavailable during the update process
     maxUnavailable: 1
+  # strategy.type -- New pods are added gradually, and old pods are terminated gradually, e.g: Recreate or RollingUpdate
   type: RollingUpdate
 
+# imagePullSecrets -- Optionally specify an array of imagePullSecrets. Secrets must be manually created in the namespace.
 imagePullSecrets:
 - name: reg-docker-secrets
-nameOverride: ""
-fullnameOverride: ""
 
+# podSecurityContext -- PodSecurityContext holds pod-level security attributes and common container settings
 podSecurityContext: {}
   # fsGroup: 2000
 
+# securityContext -- Setting security context at the pod applies those settings to all containers in the pod
 securityContext: {}
   # capabilities:
   #   drop:
@@ -41,10 +60,14 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
+  # service.name -- svc name need to be know for share with envoy
   name: scalar-ledger-headless
+  # service.type -- service types in kubernetes
   type: ClusterIP
+  # service.clusterIP -- to make sure it is a headless service
   clusterIP: None
 
+# resources -- resources allowed to the pod
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
@@ -57,14 +80,17 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+# nodeSelector -- nodeSelector is form of node selection constraint
 nodeSelector: {}
 
+# tolerations -- Tolerations are applied to pods, and allow (but do not require) the pods to schedule onto nodes with matching taints.
 tolerations: []
 # - key: kubernetes.io/app
 #   operator: Equal
 #   value: scalardl
 #   effect: NoSchedule
 
+# affinity -- the affinity/anti-affinity feature, greatly expands the types of constraints you can express
 affinity: {}
   # nodeAffinity:
   #   requiredDuringSchedulingIgnoredDuringExecution:
@@ -87,14 +113,20 @@ affinity: {}
   #       topologyKey: kubernetes.io/hostname
 
 initContainer:
+  # initContainer.enabled -- to enabled cassandra keyspace creation 
   enabled: true
   image:
+    # initContainer.image.repository -- Docker image for initContainer
     repository: cassandra
+    # initContainer.image.repository -- Docker image tag, e.g: latest or specific version
     tag: latest
+    # image.pullPolicy -- Specify a imagePullPolicy
     pullPolicy: IfNotPresent
+  # initContainer.waitCassandra -- number of second before talk to cassandra for keyspace creation
   waitCassandra: 20
 
 files:
+  # files.init.cql-- scalar-ledger configuration for cassandra
   init.cql: |
     CREATE KEYSPACE IF NOT EXISTS scalar WITH replication = {'class': 'NetworkTopologyStrategy', 'dc1': 1 };
     CREATE KEYSPACE IF NOT EXISTS coordinator WITH replication = {'class': 'NetworkTopologyStrategy', 'dc1': 1 };
