add template helm docs

--- a/charts/stable/scalar-envoy/values.yaml
+++ b/charts/stable/scalar-envoy/values.yaml
@@ -71,10 +71,6 @@ service:
 
 # resources -- resources allowed to the pod
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
@@ -129,7 +125,7 @@ serviceMonitor:
   additionalLabels: {}
 
 files:
-  # files.envoy.yaml -- envoy configuration
+  # files."envoy.yaml" -- envoy configuration
   envoy.yaml: |-
     admin:
       access_log_path: /dev/stdout
