--- a/charts/stable/scalar-envoy/Chart.yaml
+++ b/charts/stable/scalar-envoy/Chart.yaml
@@ -1,13 +1,16 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: "1.0"
+deprecated: false
 description: Implementation of Envoy for scalar-ledger. Envoy is an open source edge and service proxy, designed for cloud-native applications.
 icon: https://scalar-labs.com/wp-content/themes/scalar/assets/img/logo_scalar.svg
 keywords:
 - envoy
 - proxy
 home: https://www.envoyproxy.io/
+sources: ["https://github.com/envoyproxy/envoy"]
+type: application
 maintainers:
-- name: Paul Dozancuk
-  email: paul.dozancuk@scalar-labs.com
+  - name: Paul Dozancuk
+    email: paul.dozancuk@scalar-labs.com
 name: scalar-envoy
 version: 0.1.0
