--- a/charts/stable/scalar-ledger/Chart.yaml
+++ b/charts/stable/scalar-ledger/Chart.yaml
@@ -1,13 +1,16 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: "1.0"
+deprecated: false
 description: A Helm chart for Kubernetes Scalar Ledger
 name: scalar-ledger
 version: 0.1.0
 icon: https://scalar-labs.com/wp-content/themes/scalar/assets/img/logo_scalar.svg
+type: application
 keywords:
 - ledger
 - DLT
 home: https://scalar-labs.com/
+source: ["https://scalardl.readthedocs.io/en/latest/"]
 maintainers:
-- name: Paul Dozancuk
-  email: paul.dozancuk@scalar-labs.com
+  - name: Paul Dozancuk
+    email: paul.dozancuk@scalar-labs.com
