update to latest version, use scalar-k8s terraform and move folder

--- a/operation/manifests/envoy/10-envoy-configmap.yaml
+++ b/operation/manifests/envoy/10-envoy-configmap.yaml
@@ -2,14 +2,13 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    k8s-app: envoy
-    version: v1
+    app.kubernetes.io/name: envoy
+    app.kubernetes.io/version: v1
   name: envoy
-  namespace: scalardlt
 data:
   envoy.yaml: |-
     admin:
-      access_log_path: /tmp/admin_access.log
+      access_log_path: /dev/stdout
       address:
         socket_address:
           address: 0.0.0.0
@@ -50,8 +49,8 @@ data:
               - name: envoy.router
       - name: listener_1
         address:
-          socket_address: 
-            address: 0.0.0.0 
+          socket_address:
+            address: 0.0.0.0
             port_value: 50052
         filter_chains:
         - filters:
@@ -85,8 +84,8 @@ data:
         connect_timeout: 0.25s
         type: strict_dns
         lb_policy: round_robin
-        hosts: 
-          socket_address: 
+        hosts:
+          socket_address:
             address: scalar-ledger-headless
             port_value: 50051
         health_checks:
@@ -98,14 +97,13 @@ data:
             grpc_health_check: {}
         http2_protocol_options: {}
         drain_connections_on_host_removal: true
-       
       - name: scalar-ledger-privileged
         connect_timeout: 0.25s
         type: strict_dns
         lb_policy: round_robin
-        hosts: 
-          socket_address: 
-            address: scalar-ledger-headless
+        hosts:
+          socket_address:
+            address: sscalar-ledger-headless
             port_value: 50052
         health_checks:
           - timeout: 1s
