--- a/operation/manifests/envoy/30-envoy-service.yaml
+++ b/operation/manifests/envoy/30-envoy-service.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: envoy
-  namespace: scalardlt
 spec:
   ports:
   - name: envoy
@@ -14,7 +13,7 @@ spec:
     protocol: TCP
     targetPort: 50052
   selector:
-    k8s-app: envoy
-    version: v1
+    app.kubernetes.io/name: envoy
+    app.kubernetes.io/version: v1
   sessionAffinity: None
   type: LoadBalancer
