--- a/operation/manifests/ledger/10-scalar-ledger-configmap.yaml
+++ b/operation/manifests/ledger/10-scalar-ledger-configmap.yaml
@@ -2,18 +2,14 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    k8s-app: scalar-ledger
-    version: v1
+    app.kubernetes.io/nam: scalar-ledger
+    app.kubernetes.io/version: v1
   name: scalar-ledger
-  namespace: scalardlt
 data:
-  startup.sh: |
-    #!/bin/bash
-    ./bin/scalar-ledger -config ledger.properties
   init.cql: |
-    DROP KEYSPACE IF EXISTS scalar;
-    CREATE KEYSPACE IF NOT EXISTS scalar WITH REPLICATION = {'class': 'SimpleStrategy', 'replication_factor': 1 };
-    CREATE KEYSPACE IF NOT EXISTS coordinator WITH replication = {'class': 'SimpleStrategy','replication_factor': 1 };
+    CREATE KEYSPACE IF NOT EXISTS scalar WITH replication = {'class': 'NetworkTopologyStrategy', 'dc1': 1 };
+    CREATE KEYSPACE IF NOT EXISTS coordinator WITH replication = {'class': 'NetworkTopologyStrategy', 'dc1': 1 };
+    ALTER KEYSPACE system_auth WITH replication = {'class': 'NetworkTopologyStrategy', 'dc1': 1 };
     CREATE TABLE IF NOT EXISTS scalar.asset (
         id text,
         age int,
