--- a/operation/manifests/ledger/30-scalar-ledger-service.yaml
+++ b/operation/manifests/ledger/30-scalar-ledger-service.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: scalar-ledger-headless
-  namespace: scalardlt
 spec:
   clusterIP: None
   ports:
@@ -15,7 +14,7 @@ spec:
     protocol: TCP
     targetPort: 50052
   selector:
-    k8s-app: scalar-ledger
-    version: v1
+    app.kubernetes.io/name: scalar-ledger
+    app.kubernetes.io/version: v1
   sessionAffinity: None
   type: ClusterIP
