--- a/.github/workflows/ansible_operation_lint.yml
+++ b/.github/workflows/ansible_operation_lint.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Lint Ansible Playbook
       uses: ansible/ansible-lint-action@master
       with:
-        targets: "./operation"
-        args: "--exclude=./operation/manifests --exclude=./operation/config"
+        targets: "operation/**/*.(yml|yaml)"
+        args: "--exclude=operation/config --exclude=operation/manifests"
