--- a/.github/workflows/ansible_operation_lint.yml
+++ b/.github/workflows/ansible_operation_lint.yml
@@ -5,20 +5,20 @@ on:
     branches:
       - master
     paths:
-      - 'operation/**'
+      - "operation/**"
   push:
     branches:
       - master
     paths:
-    - 'operation/**'
+      - "operation/**"
 jobs:
   ansible:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Lint Ansible Playbook
-      uses: ansible/ansible-lint-action@master
-      with:
-        targets: "operation/**/*.(yml|yaml)"
-        args: "--exclude=operation/config --exclude=operation/manifests"
+      - name: Lint Ansible Playbook
+        uses: ansible/ansible-lint-action@master
+        with:
+          targets: "operation/**/*.(yml|yaml)"
+          args: ""
