remove port name

--- a/operation/manifests/envoy/envoy-service.yaml
+++ b/operation/manifests/envoy/envoy-service.yaml
@@ -8,7 +8,7 @@ spec:
     port: 50051
     protocol: TCP
     targetPort: 50051
-  - name: envoy-priv
+  - name: envoy-privileged
     port: 50052
     protocol: TCP
     targetPort: 50052
