--- a/operation/manifests/ledger/scalar-ledger-deployment.yaml
+++ b/operation/manifests/ledger/scalar-ledger-deployment.yaml
@@ -92,7 +92,7 @@ spec:
               - key: agentpool
                 operator: In
                 values:
-                - scalardl
+                - scalar-apps-pool
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
           - podAffinityTerm:
@@ -108,4 +108,4 @@ spec:
         - effect: NoSchedule
           key: kubernetes.io/app
           operator: Equal
-          value: scalardl
+          value: scalar-apps-pool
