--- a/operation/manifests/ledger/scalar-ledger-deployment.yaml
+++ b/operation/manifests/ledger/scalar-ledger-deployment.yaml
@@ -1,9 +1,9 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/name: scalar-ledger
-    app.kubernetes.io/version: v1
+    app.kubernetes.io/version: v2.0.5
   name: scalar-ledger
 spec:
   minReadySeconds: 120
@@ -11,7 +11,7 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: scalar-ledger
-      app.kubernetes.io/version: v1
+      app.kubernetes.io/version: v2.0.5
   strategy:
     rollingUpdate:
       maxSurge: 0
@@ -21,7 +21,7 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: scalar-ledger
-        app.kubernetes.io/version: v1
+        app.kubernetes.io/version: v2.0.5
     spec:
       initContainers:
       - name: cassandra-load-keyspace
