fix value in nodeAffinity and tolerations

--- a/operation/manifests/envoy/envoy-deployment.yaml
+++ b/operation/manifests/envoy/envoy-deployment.yaml
@@ -76,7 +76,7 @@ spec:
               - key: agentpool
                 operator: In
                 values:
-                - scalarapps
+                - scalardlpool
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
           - podAffinityTerm:
@@ -92,4 +92,4 @@ spec:
         - effect: NoSchedule
           key: kubernetes.io/app
           operator: Equal
-          value: scalarapps
+          value: scalardlpool
