--- a/operation/roles/scalar.helm/tasks/tiller.yml
+++ b/operation/roles/scalar.helm/tasks/tiller.yml
@@ -1,5 +1,5 @@
 ---
-- name: check if tiller is already installed
+- name: Check if tiller pod is already installed in Kubernetes
   become: no
   k8s_info:
     api_version: extensions/v1beta1
@@ -8,7 +8,7 @@
     namespace: kube-system
   register: tiller
 
-- name: install tiller
+- name: Deploy tiller pod in Kubernetes
   command: "{{ HELM_PATH }} init --service-account tiller --wait"
   become: no
   when: tiller.resources | length == 0
