--- a/operation/roles/scalar.kubectl/tasks/install.yml
+++ b/operation/roles/scalar.kubectl/tasks/install.yml
@@ -1,5 +1,5 @@
 ---
-- name: download and install binary
+- name: Download and install binary on the admin server
   get_url:
     url: "https://storage.googleapis.com/kubernetes-release/release/{{ VERSION }}/bin/linux/amd64/kubectl"
     dest: "{{ KUBECTL_PATH }}"
