--- a/operation/manifests/configuration/envoy.yaml
+++ b/operation/manifests/configuration/envoy.yaml
@@ -1,107 +1,156 @@
 admin:
   access_log_path: /dev/stdout
+  profile_path: /etc/envoy/envoy.prof
   address:
-    socket_address:
-      address: 0.0.0.0
-      port_value: 9901
+    socket_address: { address: 0.0.0.0, port_value: 9001 }
 static_resources:
   listeners:
-  - name: listener_0
-    address:
-      socket_address:
-        address: 0.0.0.0
-        port_value: 50051
-    filter_chains:
-    - filters:
-      - name: envoy.http_connection_manager
-        config:
-          codec_type: auto
-          stat_prefix: ingress_http
-          route_config:
-            name: local_route
-            virtual_hosts:
-            - name: local_service
-              domains: ["*"]
-              routes:
-              - match: { prefix: "/" }
-                route: { cluster: scalar-ledger }
-              cors:
-                allow_origin_string_match:
-                  - safe_regex:
-                      google_re2: {}
-                      regex: \*
-                allow_methods: GET, PUT, DELETE, POST, OPTIONS
-                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
-                max_age: "1728000"
-                expose_headers: custom-header-1,grpc-status,grpc-message,rpc.status-bin
-          http_filters:
-          - name: envoy.grpc_web
-          - name: envoy.cors
-          - name: envoy.router
-  - name: listener_1
-    address:
-      socket_address:
-        address: 0.0.0.0
-        port_value: 50052
-    filter_chains:
-    - filters:
-      - name: envoy.http_connection_manager
-        config:
-          codec_type: auto
-          stat_prefix: ingress_http
-          route_config:
-            name: local_route
-            virtual_hosts:
-            - name: local_service
-              domains: ["*"]
-              routes:
-              - match: { prefix: "/" }
-                route: { cluster: scalar-ledger-privileged }
-              cors:
-                allow_origin_string_match:
-                  - safe_regex:
-                      google_re2: {}
-                      regex: \*
-                allow_methods: GET, PUT, DELETE, POST, OPTIONS
-                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
-                max_age: "1728000"
-                expose_headers: custom-header-1,grpc-status,grpc-message,rpc.status-bin
-          http_filters:
-          - name: envoy.grpc_web
-          - name: envoy.cors
-          - name: envoy.router
+    - name: scalar-service
+      address:
+        socket_address:
+          address: 0.0.0.0
+          port_value: 50051
+      filter_chains:
+        - filters:
+          - name: envoy.filters.network.http_connection_manager
+            typed_config:
+              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
+              access_log:
+                - name: envoy.access_loggers.file
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
+                    path: "/dev/stdout"
+              http_filters:
+                - name: envoy.filters.http.grpc_web
+                - name: envoy.filters.http.cors
+                - name: envoy.filters.http.router
+              codec_type: auto
+              stat_prefix: ingress_http
+              route_config:
+                name: scalar_route
+                virtual_hosts:
+                  - name: scalar-service
+                    domains:
+                      - "*"
+                    routes:
+                      - match:
+                          prefix: "/"
+                          grpc: {}
+                        route:
+                          cluster: scalar-service
+                      - match:
+                          prefix:  "/"
+                          headers:
+                            - name: "X-User-Agent"
+                              prefix_match: "grpc-web-javascript"
+                        route:
+                          cluster: scalar-service
+                    cors:
+                      allow_origin_string_match:
+                        - safe_regex:
+                            google_re2: {}
+                            regex: \*
+                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
+                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
+                      max_age: "1728000"
+                      expose_headers: grpc-status,grpc-message,rpc.status-bin
+    - name: scalar-privileged
+      address:
+        socket_address:
+          address: 0.0.0.0
+          port_value: 50052
+      filter_chains:
+        - filters:
+          - name: envoy.filters.network.http_connection_manager
+            typed_config:
+              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
+              access_log:
+                - name: envoy.access_loggers.file
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
+                    path: "/dev/stdout"
+              http_filters:
+                - name: envoy.filters.http.grpc_web
+                - name: envoy.filters.http.cors
+                - name: envoy.filters.http.router
+              codec_type: auto
+              stat_prefix: ingress_http
+              route_config:
+                name: scalar_route
+                virtual_hosts:
+                  - name: scalar-privileged
+                    domains:
+                      - "*"
+                    routes:
+                      - match:
+                          prefix: "/"
+                          grpc: {}
+                        route:
+                          cluster: scalar-privileged
+                      - match:
+                          prefix:  "/"
+                          headers:
+                            - name: "X-User-Agent"
+                              prefix_match: "grpc-web-javascript"
+                        route:
+                          cluster: scalar-privileged
+                    cors:
+                      allow_origin_string_match:
+                        - safe_regex:
+                            google_re2: {}
+                            regex: \*
+                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
+                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
+                      max_age: "1728000"
+                      expose_headers: grpc-status,grpc-message,rpc.status-bin
   clusters:
-  - name: scalar-ledger
-    connect_timeout: 0.25s
-    type: strict_dns
-    lb_policy: round_robin
-    hosts:
-      socket_address:
-        address: scalar-ledger-headless
-        port_value: 50051
-    health_checks:
-      - timeout: 1s
-        interval: 5s
-        interval_jitter: 1s
-        unhealthy_threshold: 3
-        healthy_threshold: 3
-        grpc_health_check: {}
-    http2_protocol_options: {}
-    drain_connections_on_host_removal: true
-  - name: scalar-ledger-privileged
-    connect_timeout: 0.25s
-    type: strict_dns
-    lb_policy: round_robin
-    hosts:
-      socket_address:
-        address: scalar-ledger-headless
-        port_value: 50052
-    health_checks:
-      - timeout: 1s
-        interval: 5s
-        interval_jitter: 1s
-        unhealthy_threshold: 3
-        healthy_threshold: 3
-        grpc_health_check: {}
-    http2_protocol_options: {}
-    drain_connections_on_host_removal: true
+    - name: scalar-service
+      connect_timeout: 0.25s
+      type: strict_dns
+      http2_protocol_options: {}
+      upstream_connection_options:
+        tcp_keepalive:
+          keepalive_time: 300
+      lb_policy: round_robin
+      health_checks:
+        - timeout: 1s
+          interval: 5s
+          interval_jitter: 1s
+          unhealthy_threshold: 3
+          healthy_threshold: 3
+          grpc_health_check: {}
+      drain_connections_on_host_removal: true
+      load_assignment:
+        cluster_name: scalar-service
+        endpoints:
+          - lb_endpoints:
+            - endpoint:
+                address:
+                  socket_address:
+                    address: scalar-ledger-headless
+                    port_value: 50051
+    - name: scalar-privileged
+      connect_timeout: 0.25s
+      type: strict_dns
+      http2_protocol_options: {}
+      upstream_connection_options:
+        tcp_keepalive:
+          keepalive_time: 300
+      lb_policy: round_robin
+      health_checks:
+        - timeout: 1s
+          interval: 5s
+          interval_jitter: 1s
+          unhealthy_threshold: 3
+          healthy_threshold: 3
+          grpc_health_check: {}
+      drain_connections_on_host_removal: true
+      load_assignment:
+        cluster_name: scalar-privileged
+        endpoints:
+          - lb_endpoints:
+            - endpoint:
+                address:
+                  socket_address:
+                    address: scalar-ledger-headless
+                    port_value: 50052
