--- a/operation/playbook-install-tools.yml
+++ b/operation/playbook-install-tools.yml
@@ -19,7 +19,7 @@
     set_fact:
       ansible_python_interpreter: "/usr/bin/python3"
   roles:
-    - "scalar.kubectl"
-    - "scalar.helm"
+    - "kubectl"
+    - "helm"
   tags:
   - kubernetes tool
