--- a/operation/playbook-install-tools.yml
+++ b/operation/playbook-install-tools.yml
@@ -3,8 +3,10 @@
   hosts: bastion
   gather_facts: no
   become: yes
-  vars:
-    KUBE_CONFIG: tmp/kube_config
+  # vars:
+    # KUBECTL_CONFIG: tmp/kube_config
+    # KUBECTL_VERSION: v1.15.10
+    # HELM_VERSION: v3.2.1
   pre_tasks:
   # ansible require to use python3 as the python2 is end of support
   # need to view with team
