--- a/operation/roles/kubectl/defaults/main.yml
+++ b/operation/roles/kubectl/defaults/main.yml
@@ -1,3 +1,3 @@
-VERSION: v1.15.10
+KUBECTL_VERSION: v1.15.10
 KUBECTL_PATH: /usr/local/bin/kubectl
-KUBE_CONFIG: tmp/kube_config
+KUBECTL_CONFIG: tmp/kube_config
