--- a/operation/roles/kubectl/tasks/setup.yml
+++ b/operation/roles/kubectl/tasks/setup.yml
@@ -9,7 +9,7 @@
 - name: Copy the kube_config into kubectl bastion
   become: no
   copy:
-    src: "{{ KUBE_CONFIG }}"
+    src: "{{ KUBECTL_CONFIG }}"
     dest: "/home/{{ ansible_user }}/.kube/config"
     mode: '0644'
 
